# findlatest

./: LICENSE  README.md  findlatest.cabal  latestsops.cabal  stack.yaml
app/: Main.hs
