name:                latestsops
version:             0.1.0.0
synopsis:            List the latest versions of a given file name.
-- description:
homepage:            https://github.com/bjornbm/latestsops#readme
license:             BSD3
license-file:        LICENSE
author:              Bjorn Buckwalter
maintainer:          bjorn@buckwalter.se
copyright:           Copyright: (c) 2016 Bjorn Buckwalter
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable latestsops-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , filemanip
                     , filepath
                     , latestsops
  default-language:    Haskell2010

test-suite latestsops-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , latestsops
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bjornbm/latestsops
